# hasso

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/hasso/: __init__.py
src/hasso/file_format/: csv_format.py
src/hasso/file_format/csv_format/: __init__.py  argument.py  dump_csv.py  func_mode.py  load_csv.py
src/hasso/file_format/csv_format/converter/: default.py  func.py  levels.py
src/hasso/file_format/csv_format/converter/converters/: __init__.py  boolean_from_str.py  boolean_to_str.py  remove_blank_row.py  replace_excel_return.py  row_as_dict.py  sort_table.py  to_float_cell.py  to_integer_cell.py  to_null_str.py  to_null_str_column.py  trim_string_by_cell.py  trim_string_by_column.py
src/table/: table.py
