[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hasso"
version = "0.0.1"
authors = [
  { name="Kaiming Tao", email="mads396@gmail.com" },
]
description = "Python library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KaimingTao/hasso"
"Bug Tracker" = "https://github.com/KaimingTao/hasso/issues"
